Test for endpoint returning list of flights